<resources>
    <string name="app_name">BrandysEStore</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv_header_act_main">Brandy\'s</string>
    <string name="tv_med_title_frag_home">Popular Categories:</string>
    <string name="tv_newest_med_title_frag_home"><![CDATA[Popular New Arrivals!]]></string>
    <string name="tv_small_title_info_card">Product Name</string>
    <string name="iv_small_image_info_card">Product Main Image</string>
    <string name="tv_header_frag_details">Product Details Fragment</string>
    <string name="tv_product_name_frag_details">Product Name</string>
    <string name="tv_product_cat_frag_details">Product Cat</string>
    <string name="iv_main_image_url_frag_details">Product Main Image URL</string>
    <string name="tv_product_details_url_frag_details">Product Details Url — Link</string>
    <string name="tv_header_frag_category_products">Products By Category</string>
    <string name="tv_cat_title_frag_category_products">Category Name</string>
    <string name="tv_product_desc_frag_details">Product Description</string>
    <string name="tv_product_price_frag_details">Price Amount</string>
    <string name="tv_currency_type_frag_details">Currency Type</string>
    <string name="btn_goToAliExpress_frag_details">Product In AliExpress</string>
    <string name="btn_browse_rcv_last_btn">Browse more categories</string>
    <string name="et_search_frag_home">Search More Categories</string>
    <string name="tv_name_List_item_card">cat name</string>
    <string name="title_about">About</string>
    <string name="tv_header_frag_dashbord">About the App</string>
    <string name="tv_api_name_about_frag">API: MagicAliExpressAPI</string>
    <string name="tv_bullet_frag_about">•   an AliExpress API app\n\n• best categories recycler which features an autocompletetextview to search through all the categories.\n\n•   category products fragment\n\n•   product details fragment with navigation to the AliExpress product page.\n\n•   popular products recycler\n\n•   splash screen</string>
</resources>