<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#877F82"
    android:padding="25dp"
    tools:context=".ui.about.AboutFragment">

    <TextView
        android:id="@+id/tv_header_frag_dashbord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_header_frag_dashbord"

        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/material_dynamic_tertiary60"

        android:padding="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_api_name_about_frag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_api_name_about_frag"

        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="#9093CF"

        android:padding="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_frag_dashbord" />

    <EditText
        android:id="@+id/tv_bullet_frag_about"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:text="@string/tv_bullet_frag_about"

        android:inputType="textMultiLine"

        android:padding="20dp"
        android:background="#A18EC5"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_api_name_about_frag"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />



</androidx.constraintlayout.widget.ConstraintLayout>